parser/parse.output
Grammar

    0 $accept: START $end

    1 START: ImportDecl_list ClassDeclaration_list
    2      | ClassDeclaration_list

    3 ClassDeclaration_list: ClassDeclaration_list ClassDeclaration
    4                      | ClassDeclaration

    5 ImportDecl_list: ImportDecl_list ImportDecl
    6                | ImportDecl

    7 ImportDecl: KEY_IMPORT STAT Imp_list ';'
    8           | KEY_IMPORT STAT Imp_list '.' '*' ';'

    9 Imp_list: Imp_list '.' ID
   10         | ID

   11 BODY: BODY STMNT
   12     | STMNT

   13 BLCK: '{' BODY '}'
   14     | '{' '}'

   15 STMNT_without_sub: BLCK
   16                  | Expr ';'
   17                  | DEF_VAR ';'
   18                  | KEY_RETURN EMP_EXPR ';'
   19                  | KEY_CONTINUE ';'
   20                  | KEY_BREAK ';'
   21                  | KEY_YIELD Expr ';'
   22                  | Assert_stmnt
   23                  | ';'

   24 Assert_stmnt: KEY_ASSERT Expr ';'
   25             | KEY_ASSERT Expr ':' Expr ';'

   26 STMNT: STMNT_without_sub
   27      | IF_THEN
   28      | IF_THEN_ELSE
   29      | WHILE_STMNT
   30      | BASIC_FOR

   31 STMNT_noshortif: STMNT_without_sub
   32                | IF_THEN_ELSE_noshortif
   33                | WHILE_STMNT_noshortif
   34                | BASIC_FOR_noshortif

   35 WHILE_STMNT: KEY_WHILE '(' Expr ')' STMNT

   36 WHILE_STMNT_noshortif: KEY_WHILE '(' Expr ')' STMNT_noshortif

   37 BASIC_FOR: KEY_FOR '(' FOR_INIT ';' EMP_EXPR ';' FOR_UPDATE ')' STMNT

   38 BASIC_FOR_noshortif: KEY_FOR '(' FOR_INIT ';' EMP_EXPR ';' FOR_UPDATE ')' STMNT_noshortif

   39 FOR_UPDATE: STMNT_EXPR_list
   40           | %empty

   41 FOR_INIT: DEF_VAR
   42         | STMNT_EXPR_list
   43         | %empty

   44 STMNT_EXPR_list: STMNT_EXPR_list ',' STMNT_EXPR
   45                | STMNT_EXPR

   46 IF_THEN: KEY_IF '(' Expr ')' STMNT

   47 IF_THEN_ELSE: KEY_IF '(' Expr ')' STMNT_noshortif KEY_ELSE STMNT

   48 IF_THEN_ELSE_noshortif: KEY_IF '(' Expr ')' STMNT_noshortif KEY_ELSE STMNT_noshortif

   49 DEF_VAR: STAT DTYPE VAR_LIST

   50 VAR_LIST: VAR_LIST ',' VAR
   51         | VAR_LIST ',' VARA
   52         | VAR
   53         | VARA

   54 VARA: ID '=' Expr
   55     | ID '[' EMP_EXPR ']' '=' L1D
   56     | ID '[' EMP_EXPR ']' '[' EMP_EXPR ']' '=' L2D
   57     | ID '[' EMP_EXPR ']' '[' EMP_EXPR ']' '[' EMP_EXPR ']' '=' L3D

   58 VAR: ID
   59    | ID '[' EMP_EXPR ']'
   60    | ID '[' EMP_EXPR ']' '[' EMP_EXPR ']'
   61    | ID '[' EMP_EXPR ']' '[' EMP_EXPR ']' '[' EMP_EXPR ']'

   62 L3D: '{' CONT3D '}'

   63 CONT3D: CONT3D ',' L2D
   64       | L2D

   65 L2D: '{' CONT2D '}'

   66 CONT2D: CONT2D ',' L1D
   67       | L1D

   68 L1D: '{' CONT1D '}'

   69 CONT1D: CONT1D ',' Expr
   70       | Expr

   71 STMNT_EXPR: Assignment
   72           | PreIncrementExpression
   73           | PreDecrementExpression
   74           | PostDecrementExpression
   75           | PostIncrementExpression
   76           | Meth_invoc

   77 Meth_invoc: ExpressionName '(' ARG_LIST ')'

   78 Expr: AssignmentExpression

   79 AssignmentExpression: ConditionalExpression
   80                     | Assignment

   81 Assignment: LeftHandSide AssignmentOperator Expr

   82 AssignmentOperator: ASSIGN_OP
   83                   | '='

   84 ExpressionName: AmbiguousName '.' ID
   85               | ID

   86 AmbiguousName: ID
   87              | AmbiguousName '.' ID

   88 LeftHandSide: ExpressionName
   89             | FieldAccess
   90             | ArrayAccess

   91 ConditionalExpression: ConditionalOrExpression
   92                      | ConditionalOrExpression '?' Expr ':' ConditionalExpression

   93 ConditionalOrExpression: ConditionalAndExpression
   94                        | ConditionalOrExpression LOG_OR ConditionalAndExpression

   95 ConditionalAndExpression: InclusiveOrExpression
   96                         | ConditionalAndExpression LOG_AND InclusiveOrExpression

   97 InclusiveOrExpression: ExclusiveOrExpression
   98                      | InclusiveOrExpression '|' ExclusiveOrExpression

   99 ExclusiveOrExpression: AndExpression
  100                      | ExclusiveOrExpression '^' AndExpression

  101 AndExpression: EqualityExpression
  102              | AndExpression '&' EqualityExpression

  103 EqualityExpression: RelationalExpression
  104                   | EqualityExpression EQUAL RelationalExpression
  105                   | EqualityExpression NOT_EQUAL RelationalExpression

  106 RelationalExpression: ShiftExpression
  107                     | RelationalExpression '<' ShiftExpression
  108                     | RelationalExpression '>' ShiftExpression
  109                     | RelationalExpression GTR_EQUAL ShiftExpression
  110                     | RelationalExpression LESS_EQUAL ShiftExpression

  111 ShiftExpression: AdditiveExpression
  112                | ShiftExpression LEFT_SHIFT AdditiveExpression
  113                | ShiftExpression RIGHT_SHIFT AdditiveExpression
  114                | ShiftExpression SIGN_SHIFT AdditiveExpression

  115 AdditiveExpression: MultiplicativeExpression
  116                   | AdditiveExpression '+' MultiplicativeExpression
  117                   | AdditiveExpression '-' MultiplicativeExpression

  118 MultiplicativeExpression: UnaryExpression
  119                         | MultiplicativeExpression '*' UnaryExpression
  120                         | MultiplicativeExpression '/' UnaryExpression
  121                         | MultiplicativeExpression '%' UnaryExpression

  122 UnaryExpression: PreIncrementExpression
  123                | PreDecrementExpression
  124                | '+' UnaryExpression
  125                | '-' UnaryExpression
  126                | UnaryExpressionNotPlusMinus

  127 PreIncrementExpression: INCREMENT UnaryExpression

  128 PreDecrementExpression: DECREMENT UnaryExpression

  129 UnaryExpressionNotPlusMinus: PostfixExpression
  130                            | '~' UnaryExpression
  131                            | '!' UnaryExpression

  132 PostfixExpression: Primary
  133                  | ExpressionName
  134                  | PostIncrementExpression
  135                  | PostDecrementExpression

  136 FieldAccess: Primary '.' ID
  137            | KEY_SUPER '.' ID

  138 Primary: PrimaryNoNewArray
  139        | ArrayCreationExpr

  140 PrimaryNoNewArray: LIT
  141                  | '(' Expr ')'
  142                  | ArrayAccess
  143                  | Meth_invoc
  144                  | FieldAccess
  145                  | KEY_NEW ID '(' ARG_LIST ')' Class_body
  146                  | KEY_NEW ID '(' ARG_LIST ')'

  147 ArrayCreationExpr: KEY_NEW DTYPE DimExpr
  148                  | KEY_NEW ID DimExpr

  149 DimExpr: '[' Expr ']'
  150        | DimExpr '[' Expr ']'

  151 ArrayAccess: ExpressionName '[' Expr ']'
  152            | PrimaryNoNewArray '[' Expr ']'

  153 PostIncrementExpression: PostfixExpression INCREMENT

  154 PostDecrementExpression: PostfixExpression DECREMENT

  155 EMP_EXPR: Expr
  156         | %empty

  157 ARG_LIST: ARG_LISTp
  158         | %empty

  159 ARG_LISTp: ARG_LISTp ',' Expr
  160          | Expr

  161 LIT: INT
  162    | FLOAT
  163    | CHAR
  164    | STRING
  165    | BOOL
  166    | LONG
  167    | DOUBLE

  168 STAT: KEY_STATIC
  169     | %empty

  170 DTYPE: KEY_INT
  171      | KEY_BOOL
  172      | KEY_DOUBLE
  173      | KEY_FLOAT
  174      | KEY_LONG
  175      | KEY_CHAR
  176      | KEY_STRING

  177 ClassDeclaration: MOD_EMPTY_LIST KEY_CLASS ID Class_body

  178 Class_body: '{' Class_body_dec_list '}'
  179           | '{' '}'

  180 Class_body_dec_list: Class_body_dec_list Class_body_dec
  181                    | Class_body_dec

  182 Class_body_dec: Class_DEF_VAR
  183               | MethodDeclaration
  184               | ClassDeclaration
  185               | STAT BLCK
  186               | ConstructorDeclaration

  187 Class_DEF_VAR: MOD_EMPTY_LIST DTYPE VAR_LIST ';'

  188 MethodDeclaration: MOD_EMPTY_LIST Meth_Head Meth_Body

  189 Meth_Body: BLCK
  190          | ';'

  191 DIMS_list: DIMS_list '[' ']'
  192          | '[' ']'

  193 DIMS: DIMS_list

  194 Meth_Head: DTYPE DIMS Meth_decl
  195          | KEY_VOID DIMS Meth_decl
  196          | DTYPE Meth_decl
  197          | KEY_VOID Meth_decl

  198 Meth_decl: ID '(' Param_list ')'
  199          | ID '(' ')'

  200 Param_list: Param_list ',' Param
  201           | Param

  202 Param: DTYPE VAR

  203 MOD_EMPTY_LIST: MOD_LIST
  204               | %empty

  205 MOD_LIST: MOD_LIST MOD
  206         | MOD

  207 MOD: KEY_PRIVATE
  208    | KEY_PUBLIC
  209    | KEY_STATIC

  210 ConstructorDeclaration: MOD_EMPTY_LIST ID '(' Param_list ')' BLCK
  211                       | MOD_EMPTY_LIST ID '(' ')' BLCK


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 131
    '%' (37) 121
    '&' (38) 102
    '(' (40) 35 36 37 38 46 47 48 77 141 145 146 198 199 210 211
    ')' (41) 35 36 37 38 46 47 48 77 141 145 146 198 199 210 211
    '*' (42) 8 119
    '+' (43) 116 124
    ',' (44) 44 50 51 63 66 69 159 200
    '-' (45) 117 125
    '.' (46) 8 9 84 87 136 137
    '/' (47) 120
    ':' (58) 25 92
    ';' (59) 7 8 16 17 18 19 20 21 23 24 25 37 38 187 190
    '<' (60) 107
    '=' (61) 54 55 56 57 83
    '>' (62) 108
    '?' (63) 92
    '[' (91) 55 56 57 59 60 61 149 150 151 152 191 192
    ']' (93) 55 56 57 59 60 61 149 150 151 152 191 192
    '^' (94) 100
    '{' (123) 13 14 62 65 68 178 179
    '|' (124) 98
    '}' (125) 13 14 62 65 68 178 179
    '~' (126) 130
    error (256)
    ID <str> (258) 9 10 54 55 56 57 58 59 60 61 84 85 86 87 136 137 145 146 148 177 198 199 210 211
    INT <str> (259) 161
    FLOAT <str> (260) 162
    DOUBLE <str> (261) 167
    CHAR <str> (262) 163
    STRING <str> (263) 164
    BOOL <str> (264) 165
    LONG <str> (265) 166
    KEY_INT <str> (266) 170
    KEY_FLOAT <str> (267) 173
    KEY_LONG <str> (268) 174
    KEY_DOUBLE <str> (269) 172
    KEY_BOOL <str> (270) 171
    KEY_CHAR <str> (271) 175
    KEY_STRING <str> (272) 176
    KEY_VOID <str> (273) 195 197
    KEY_NEW <str> (274) 145 146 147 148
    KEY_FOR <str> (275) 37 38
    KEY_WHILE <str> (276) 35 36
    KEY_IF <str> (277) 46 47 48
    KEY_ELSE <str> (278) 47 48
    KEY_CONTINUE <str> (279) 19
    KEY_BREAK <str> (280) 20
    KEY_RETURN <str> (281) 18
    KEY_ASSERT <str> (282) 24 25
    KEY_YIELD <str> (283) 21
    KEY_SUPER <str> (284) 137
    KEY_IMPORT <str> (285) 7 8
    KEY_PRIVATE <str> (286) 207
    KEY_PUBLIC <str> (287) 208
    KEY_STATIC <str> (288) 168 209
    KEY_CLASS <str> (289) 177
    ASSIGN_OP <chr> (290) 82
    INCREMENT <str> (291) 127 153
    DECREMENT <str> (292) 128 154
    LOG_OR <str> (293) 94
    LOG_AND <str> (294) 96
    EQUAL <str> (295) 104
    NOT_EQUAL <str> (296) 105
    GTR_EQUAL <str> (297) 109
    LESS_EQUAL <str> (298) 110
    LEFT_SHIFT <str> (299) 112
    RIGHT_SHIFT <str> (300) 113
    SIGN_SHIFT <str> (301) 114


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    START (72)
        on left: 1 2
        on right: 0
    ClassDeclaration_list (73)
        on left: 3 4
        on right: 1 2 3
    ImportDecl_list (74)
        on left: 5 6
        on right: 1 5
    ImportDecl (75)
        on left: 7 8
        on right: 5 6
    Imp_list (76)
        on left: 9 10
        on right: 7 8 9
    BODY (77)
        on left: 11 12
        on right: 11 13
    BLCK (78)
        on left: 13 14
        on right: 15 185 189 210 211
    STMNT_without_sub (79)
        on left: 15 16 17 18 19 20 21 22 23
        on right: 26 31
    Assert_stmnt (80)
        on left: 24 25
        on right: 22
    STMNT (81)
        on left: 26 27 28 29 30
        on right: 11 12 35 37 46 47
    STMNT_noshortif (82)
        on left: 31 32 33 34
        on right: 36 38 47 48
    WHILE_STMNT (83)
        on left: 35
        on right: 29
    WHILE_STMNT_noshortif (84)
        on left: 36
        on right: 33
    BASIC_FOR (85)
        on left: 37
        on right: 30
    BASIC_FOR_noshortif (86)
        on left: 38
        on right: 34
    FOR_UPDATE (87)
        on left: 39 40
        on right: 37 38
    FOR_INIT (88)
        on left: 41 42 43
        on right: 37 38
    STMNT_EXPR_list (89)
        on left: 44 45
        on right: 39 42 44
    IF_THEN (90)
        on left: 46
        on right: 27
    IF_THEN_ELSE (91)
        on left: 47
        on right: 28
    IF_THEN_ELSE_noshortif (92)
        on left: 48
        on right: 32
    DEF_VAR (93)
        on left: 49
        on right: 17 41
    VAR_LIST (94)
        on left: 50 51 52 53
        on right: 49 50 51 187
    VARA (95)
        on left: 54 55 56 57
        on right: 51 53
    VAR (96)
        on left: 58 59 60 61
        on right: 50 52 202
    L3D (97)
        on left: 62
        on right: 57
    CONT3D (98)
        on left: 63 64
        on right: 62 63
    L2D (99)
        on left: 65
        on right: 56 63 64
    CONT2D (100)
        on left: 66 67
        on right: 65 66
    L1D (101)
        on left: 68
        on right: 55 66 67
    CONT1D (102)
        on left: 69 70
        on right: 68 69
    STMNT_EXPR (103)
        on left: 71 72 73 74 75 76
        on right: 44 45
    Meth_invoc (104)
        on left: 77
        on right: 76 143
    Expr (105)
        on left: 78
        on right: 16 21 24 25 35 36 46 47 48 54 69 70 81 92 141 149 150 151 152 155 159 160
    AssignmentExpression (106)
        on left: 79 80
        on right: 78
    Assignment (107)
        on left: 81
        on right: 71 80
    AssignmentOperator (108)
        on left: 82 83
        on right: 81
    ExpressionName (109)
        on left: 84 85
        on right: 77 88 133 151
    AmbiguousName (110)
        on left: 86 87
        on right: 84 87
    LeftHandSide (111)
        on left: 88 89 90
        on right: 81
    ConditionalExpression (112)
        on left: 91 92
        on right: 79 92
    ConditionalOrExpression (113)
        on left: 93 94
        on right: 91 92 94
    ConditionalAndExpression (114)
        on left: 95 96
        on right: 93 94 96
    InclusiveOrExpression (115)
        on left: 97 98
        on right: 95 96 98
    ExclusiveOrExpression (116)
        on left: 99 100
        on right: 97 98 100
    AndExpression (117)
        on left: 101 102
        on right: 99 100 102
    EqualityExpression (118)
        on left: 103 104 105
        on right: 101 102 104 105
    RelationalExpression (119)
        on left: 106 107 108 109 110
        on right: 103 104 105 107 108 109 110
    ShiftExpression (120)
        on left: 111 112 113 114
        on right: 106 107 108 109 110 112 113 114
    AdditiveExpression (121)
        on left: 115 116 117
        on right: 111 112 113 114 116 117
    MultiplicativeExpression (122)
        on left: 118 119 120 121
        on right: 115 116 117 119 120 121
    UnaryExpression (123)
        on left: 122 123 124 125 126
        on right: 118 119 120 121 124 125 127 128 130 131
    PreIncrementExpression (124)
        on left: 127
        on right: 72 122
    PreDecrementExpression (125)
        on left: 128
        on right: 73 123
    UnaryExpressionNotPlusMinus (126)
        on left: 129 130 131
        on right: 126
    PostfixExpression (127)
        on left: 132 133 134 135
        on right: 129 153 154
    FieldAccess (128)
        on left: 136 137
        on right: 89 144
    Primary (129)
        on left: 138 139
        on right: 132 136
    PrimaryNoNewArray (130)
        on left: 140 141 142 143 144 145 146
        on right: 138 152
    ArrayCreationExpr (131)
        on left: 147 148
        on right: 139
    DimExpr (132)
        on left: 149 150
        on right: 147 148 150
    ArrayAccess (133)
        on left: 151 152
        on right: 90 142
    PostIncrementExpression (134)
        on left: 153
        on right: 75 134
    PostDecrementExpression (135)
        on left: 154
        on right: 74 135
    EMP_EXPR (136)
        on left: 155 156
        on right: 18 37 38 55 56 57 59 60 61
    ARG_LIST (137)
        on left: 157 158
        on right: 77 145 146
    ARG_LISTp (138)
        on left: 159 160
        on right: 157 159
    LIT (139)
        on left: 161 162 163 164 165 166 167
        on right: 140
    STAT (140)
        on left: 168 169
        on right: 7 8 49 185
    DTYPE (141)
        on left: 170 171 172 173 174 175 176
        on right: 49 147 187 194 196 202
    ClassDeclaration (142)
        on left: 177
        on right: 3 4 184
    Class_body (143)
        on left: 178 179
        on right: 145 177
    Class_body_dec_list (144)
        on left: 180 181
        on right: 178 180
    Class_body_dec (145)
        on left: 182 183 184 185 186
        on right: 180 181
    Class_DEF_VAR (146)
        on left: 187
        on right: 182
    MethodDeclaration (147)
        on left: 188
        on right: 183
    Meth_Body (148)
        on left: 189 190
        on right: 188
    DIMS_list (149)
        on left: 191 192
        on right: 191 193
    DIMS (150)
        on left: 193
        on right: 194 195
    Meth_Head (151)
        on left: 194 195 196 197
        on right: 188
    Meth_decl (152)
        on left: 198 199
        on right: 194 195 196 197
    Param_list (153)
        on left: 200 201
        on right: 198 200 210
    Param (154)
        on left: 202
        on right: 200 201
    MOD_EMPTY_LIST (155)
        on left: 203 204
        on right: 177 187 188 210 211
    MOD_LIST (156)
        on left: 205 206
        on right: 203 205
    MOD (157)
        on left: 207 208 209
        on right: 205 206
    ConstructorDeclaration (158)
        on left: 210 211
        on right: 186


State 0

    0 $accept: . START $end

    KEY_IMPORT   shift, and go to state 1
    KEY_PRIVATE  shift, and go to state 2
    KEY_PUBLIC   shift, and go to state 3
    KEY_STATIC   shift, and go to state 4

    $default  reduce using rule 204 (MOD_EMPTY_LIST)

    START                  go to state 5
    ClassDeclaration_list  go to state 6
    ImportDecl_list        go to state 7
    ImportDecl             go to state 8
    ClassDeclaration       go to state 9
    MOD_EMPTY_LIST         go to state 10
    MOD_LIST               go to state 11
    MOD                    go to state 12


State 1

    7 ImportDecl: KEY_IMPORT . STAT Imp_list ';'
    8           | KEY_IMPORT . STAT Imp_list '.' '*' ';'

    KEY_STATIC  shift, and go to state 13

    $default  reduce using rule 169 (STAT)

    STAT  go to state 14


State 2

  207 MOD: KEY_PRIVATE .

    $default  reduce using rule 207 (MOD)


State 3

  208 MOD: KEY_PUBLIC .

    $default  reduce using rule 208 (MOD)


State 4

  209 MOD: KEY_STATIC .

    $default  reduce using rule 209 (MOD)


State 5

    0 $accept: START . $end

    $end  shift, and go to state 15


State 6

    2 START: ClassDeclaration_list .
    3 ClassDeclaration_list: ClassDeclaration_list . ClassDeclaration

    KEY_PRIVATE  shift, and go to state 2
    KEY_PUBLIC   shift, and go to state 3
    KEY_STATIC   shift, and go to state 4

    KEY_CLASS  reduce using rule 204 (MOD_EMPTY_LIST)
    $default   reduce using rule 2 (START)

    ClassDeclaration  go to state 16
    MOD_EMPTY_LIST    go to state 10
    MOD_LIST          go to state 11
    MOD               go to state 12


State 7

    1 START: ImportDecl_list . ClassDeclaration_list
    5 ImportDecl_list: ImportDecl_list . ImportDecl

    KEY_IMPORT   shift, and go to state 1
    KEY_PRIVATE  shift, and go to state 2
    KEY_PUBLIC   shift, and go to state 3
    KEY_STATIC   shift, and go to state 4

    $default  reduce using rule 204 (MOD_EMPTY_LIST)
